--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -109,6 +109,8 @@ nav ul li a:hover{
 
 }
 
+/*TERMINA NAV*/
+
 /*Title Hero, Img Hero*/
 section {
     padding: 15px 0;
@@ -329,15 +331,16 @@ img{
 
 /* Empieza la galería */
 
+
 .gallery-gallery{
-    padding-top: 10%;
-    padding-bottom: 5%;
+    padding-top: 5%; 
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .gallery-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 150px;
+    grid-auto-rows: 450px;
     padding: 20px;
     padding-bottom: 70px;
     grid-gap: 10px;
@@ -368,7 +371,7 @@ img{
 .gallery-title{
     position: absolute;
     bottom: 0;
-    color: black;
+    color: rgba(0, 0, 0, 0.463);
     background: linear-gradient(rgba(255, 255, 255, 0),rgba(0, 0, 0, 0.123));
     width: 100%;
     margin: 0;
