--- a/scss/componentes/_form.scss
+++ b/scss/componentes/_form.scss
@@ -1,7 +1,6 @@
 @import "../base/variables";
 
-
-/*ESTILOS DE PAGINA DE CONTACTO*/
+/*ESTILOS DE PÁGINA DE CONTACTO*/
 
 form{
     background-color: white;
@@ -25,8 +24,7 @@ form{
             padding: 10px;
             &:focus{
                 border-color: #18a383;
-            }
-            
+            }  
         }
     }
     .center-content{
