--- a/scss/componentes/_galeria.scss
+++ b/scss/componentes/_galeria.scss
@@ -1,6 +1,4 @@
-
-/*ESTILOS DE PAGINA DE GALERIA*/
-
+/*ESTILOS DE PÁGINA DE GALERÍA*/
 
 .gallery-gallery{
     padding-top: 5%; 
@@ -39,9 +37,7 @@
             padding: 10px;
             text-transform: unset;
         }
-        
     }
-    
 }
 
 
