--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,4 +7,5 @@
 @import "./componentes/form.scss";
 @import "./componentes/eventos.scss";
 @import "./componentes/galeria.scss";
+@import "./componentes/regiones";
 
