--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,27 +1,24 @@
 /*------NAV-----*/
 
-
 @media (max-width:1039px) {
     body header nav {
         justify-content: flex-start;
-
         a img {
             margin-left: 1rem;
         }
-
         ul {
-            position: fixed;
-            width: 50%;
-            height: 100vh;
+            position: absolute;
+            width: 100%;
+            height: 52.5vh;
             background-color: rgb(8, 8, 43);
-            top: 10vh;
+            top: 16vh;
             left: -100%;
             text-align: left;
             transition: all .5s;
             display: flex;
             flex-direction: column;
             align-content: stretch;
-
+            z-index: 1;
             li {
                 padding: 1rem 0;
                 display: flex;
@@ -42,7 +39,6 @@
                 .drawer {
                     display: block;
                 }
-
                 #ckbox:checked~.menu-box {
                     left: 0;
                 }
@@ -53,156 +49,119 @@
 
 /*------CARDS------*/
 
-
-@media (max-width:640px) {
+@media (max-width:1039px) {
     section .container-card .card-container {
         display: block;
         width: 450px;
-
         .card-personaje {
             padding: 20px 20px 5px 20px;
             border: none;
-
             h2 {
                 text-align: center;
             }
-
             h4 {
                 margin: 0;
                 text-align: center;
             }
         }
-
         .card-arma {
             padding: 20px 20px 5px 20px;
             border: none;
-
             h2 {
                 text-align: center;
             }
-
             h4 {
                 margin: 0;
                 text-align: center;
             }
         }
-
         .card-material {
             padding: 20px 20px 5px 20px;
             border: none;
-
             h2 {
                 text-align: center;
             }
-
             h4 {
                 margin: 0;
                 text-align: center;
             }
         }
-
         .historia {
             padding: 5px 20px 20px 20px;
         }
     }
-
-
 }
 
 /*------GALERIA------*/
 
-@media (min-width:518px) {
+@media only screen and (min-width: 360px) and (max-width: 1024px) {
     .gallery-container {
-        grid-template-columns: repeat(3, 1fr);
-
+        grid-template-columns: repeat(5, 1fr);
         .gallery-item:nth-child(1) {
             grid-column-start: span 2;
         }
-
         .gallery-item:nth-child(2) {
             grid-column-start: span 3;
         }
-
         .gallery-item:nth-child(3) {
             grid-column-start: span 2;
         }
-
         .gallery-item:nth-child(4) {
             grid-column-start: span 3;
         }
-
         .gallery-item:nth-child(5) {
             grid-column-start: span 2;
             grid-row-start: span 2;
         }
-
         .gallery-item:nth-child(6) {
             grid-column-start: span 3;
             grid-row-start: span 1;
         }
-
         .gallery-item:nth-child(7) {
             grid-column-start: span 3;
             grid-row-start: span 1;
         }
-
         .gallery-item:nth-child(8) {
             grid-column-start: span 2;
         }
-
         .gallery-item:nth-child(9) {
             grid-column-start: span 3;
         }
     }
 }
 
-@media (min-width:1024px) {
+@media only screen and (min-width: 1025px) and (max-width: 2400px) {
     .gallery-container {
         grid-template-columns: repeat(5, 1fr);
-        width: 100%;
-        margin: auto;
-
-        .gallery-item:nth-child(2) {
-            grid-column-start: span 3;
-        }
-
-        .gallery-item:nth-child(3) {
-            grid-column-start: span 3;
-        }
-
         .gallery-item:nth-child(1) {
             grid-column-start: span 2;
             grid-row-start: span 2;
         }
-
+        .gallery-item:nth-child(2) {
+            grid-column-start: span 3;
+        }
+        .gallery-item:nth-child(3) {
+            grid-column-start: span 3;
+        }
         .gallery-item:nth-child(4) {
             grid-column-start: span 2;
-            grid-row-start: span 2;
         }
-
         .gallery-item:nth-child(5) {
             grid-column-start: span 3;
             grid-row-start: span 2;
         }
-
         .gallery-item:nth-child(6) {
             grid-column-start: span 2;
-            grid-row-start: span 1;
         }
-
         .gallery-item:nth-child(7) {
-            grid-column-start: span 3;
+            grid-column-start: span 5;
             grid-row-start: span 1;
         }
-
         .gallery-item:nth-child(8) {
-            grid-column-start: span 3;
-            grid-row-start: span 1;
-        }
-
-        .gallery-item:nth-child(9) {
             grid-column-start: span 2;
-            grid-row-start: span 1;
+        }
+        .gallery-item:nth-child(9) {
+            grid-column-start: span 3;
         }
     }
 }
