--- a/scss/componentes/_eventos.scss
+++ b/scss/componentes/_eventos.scss
@@ -1,5 +1,4 @@
-
-/*ESTILOS DE PAGINA DE EVENTOS*/
+/*ESTILOS DE PÁGINA DE EVENTOS*/
 
 .eventos{
     align-items: center;
@@ -12,7 +11,6 @@
         width: 350px;
     }
 }
-
 .event{
     text-align: center;
     font-size: 25px;
