--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -604,7 +604,7 @@ form {
         top: 0;
         transition: 0.5s cubic-bezier(0.19, 1, 0.22, 1); }
   .main-content .concept-seven {
-    background: url("../../assets/imagenes/snezhnaya.jpg") top center/cover; }
+    background: url("../../assets/imagenes/Palace_in_Snezhnaya.webp") top center/cover; }
     .main-content .concept-seven h1 {
       letter-spacing: 35px;
       color: white;
