--- a/scss/componentes/_regiones.scss
+++ b/scss/componentes/_regiones.scss
@@ -195,7 +195,7 @@
         }
     }
     .concept-seven {
-        background: url("../../assets/imagenes/snezhnaya.jpg") top center/cover;
+        background: url("../../assets/imagenes/Palace_in_Snezhnaya.webp") top center/cover;
         @extend %flex;
         h1 {
             letter-spacing: 35px;
