--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,9 +311,9 @@ footer .container-fluid-footer {
       grid-column-start: span 3;
       grid-row-start: span 1; }
     .gallery-container .gallery-item:nth-child(8) {
-      grid-column-start: span 2; }
+      grid-column-start: span 5; }
     .gallery-container .gallery-item:nth-child(9) {
-      grid-column-start: span 3; } }
+      grid-column-start: span 5; } }
 
 @media only screen and (min-width: 1025px) and (max-width: 2400px) {
   .gallery-container {
@@ -329,16 +329,16 @@ footer .container-fluid-footer {
       grid-column-start: span 2; }
     .gallery-container .gallery-item:nth-child(5) {
       grid-column-start: span 3;
-      grid-row-start: span 2; }
+      grid-row-start: span 4; }
     .gallery-container .gallery-item:nth-child(6) {
       grid-column-start: span 2; }
     .gallery-container .gallery-item:nth-child(7) {
-      grid-column-start: span 5;
-      grid-row-start: span 1; }
+      grid-column-start: span 2; }
     .gallery-container .gallery-item:nth-child(8) {
       grid-column-start: span 2; }
     .gallery-container .gallery-item:nth-child(9) {
-      grid-column-start: span 3; } }
+      grid-column-start: span 5;
+      grid-row-start: span 2; } }
 
 /*-------Variables-------*/
 /*---Paleta de colores---*/
