--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 /*---Paleta de colores---*/
 /*Map*/
 /*Extend*/
-section .container-card, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
+section .container-card, .eventos, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -28,7 +28,7 @@ section .container-card, .main-content .concept-four, .main-content .concept-fiv
 /*---Paleta de colores---*/
 /*Map*/
 /*Extend*/
-section .container-card, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
+section .container-card, .eventos, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -86,7 +86,7 @@ header nav {
 /*---Paleta de colores---*/
 /*Map*/
 /*Extend*/
-section .container-card, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
+section .container-card, .eventos, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -112,7 +112,8 @@ section .container-card {
       border-right: 1px solid #ddd; }
       section .container-card .card-container .card-personaje a {
         position: relative;
-        display: block; }
+        display: flex;
+        justify-content: center; }
         section .container-card .card-container .card-personaje a img {
           margin: 0 30px;
           transition: .2s;
@@ -136,7 +137,8 @@ section .container-card {
       border-right: 1px solid #ddd; }
       section .container-card .card-container .card-materiales a {
         position: relative;
-        display: block; }
+        display: flex;
+        justify-content: center; }
         section .container-card .card-container .card-materiales a img {
           margin: 0 30px;
           transition: .2s;
@@ -160,7 +162,8 @@ section .container-card {
       border-right: 1px solid #ddd; }
       section .container-card .card-container .card-arma a {
         position: relative;
-        display: block; }
+        display: flex;
+        justify-content: center; }
         section .container-card .card-container .card-arma a img {
           margin: 0 30px;
           transition: .2s;
@@ -204,7 +207,7 @@ section {
 /*---Paleta de colores---*/
 /*Map*/
 /*Extend*/
-section .container-card, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
+section .container-card, .eventos, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -233,7 +236,7 @@ footer .container-fluid-footer {
     body header nav ul {
       position: absolute;
       width: 100%;
-      height: 52.5vh;
+      height: 100vh;
       background-color: #08082b;
       top: 16vh;
       left: -100%;
@@ -344,7 +347,7 @@ footer .container-fluid-footer {
 /*---Paleta de colores---*/
 /*Map*/
 /*Extend*/
-section .container-card, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
+section .container-card, .eventos, .main-content .concept-four, .main-content .concept-five .word, .main-content .concept-seven {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -396,20 +399,20 @@ form {
 
 /*ESTILOS DE PÁGINA DE EVENTOS*/
 .eventos {
-  align-items: center;
-  padding: 20px 15%;
-  text-align: center; }
+  flex-direction: column;
+  padding: 5% 0px; }
   .eventos .proximamente {
-    padding: 15px 0; }
+    text-align: center; }
   .eventos img {
-    width: 350px; }
+    padding: 10px;
+    width: 100%; }
 
 .event {
   text-align: center;
   font-size: 25px;
   text-transform: uppercase;
   text-decoration: solid;
-  padding-top: 25px; }
+  padding-top: 5%; }
 
 /*ESTILOS DE PÁGINA DE GALERÍA*/
 .gallery-gallery {
