--- a/scss/componentes/_eventos.scss
+++ b/scss/componentes/_eventos.scss
@@ -1,14 +1,15 @@
 /*ESTILOS DE PÁGINA DE EVENTOS*/
 
 .eventos{
-    align-items: center;
-    padding: 20px 15%;
-    text-align: center;
+    @extend %flex;
+    flex-direction: column;
+    padding: 5% 0px;
     .proximamente{
-        padding: 15px 0;
+        text-align: center;
     }
     img{
-        width: 350px;
+        padding: 10px;
+        width: 100%;
     }
 }
 .event{
@@ -16,7 +17,7 @@
     font-size: 25px;
     text-transform:uppercase;
     text-decoration: solid;
-    padding-top: 25px;
+    padding-top: 5%;
 }
 
 
