--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,31 @@ footer .container-fluid-footer {
       padding: 5px 20px 20px 20px; } }
 
 /*------GALERIA------*/
-@media only screen and (min-width: 360px) and (max-width: 1024px) {
+@media only screen and (min-width: 360px) and (max-width: 450px) {
+  .gallery-container {
+    grid-template-columns: repeat(5, 1fr); }
+    .gallery-container .gallery-item:nth-child(1) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(2) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(3) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(4) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(5) {
+      grid-column-start: span 5;
+      grid-row-start: span 3; }
+    .gallery-container .gallery-item:nth-child(6) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(7) {
+      grid-column-start: span 5;
+      grid-row-start: span 1; }
+    .gallery-container .gallery-item:nth-child(8) {
+      grid-column-start: span 5; }
+    .gallery-container .gallery-item:nth-child(9) {
+      grid-column-start: span 5; } }
+
+@media only screen and (min-width: 451px) and (max-width: 1024px) {
   .gallery-container {
     grid-template-columns: repeat(5, 1fr); }
     .gallery-container .gallery-item:nth-child(1) {
