--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -94,8 +94,42 @@
 }
 
 /*------GALERIA------*/
+@media only screen and (min-width: 360px) and (max-width: 450px) {
+    .gallery-container {
+        grid-template-columns: repeat(5, 1fr);
+        .gallery-item:nth-child(1) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(2) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(3) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(4) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(5) {
+            grid-column-start: span 5;
+            grid-row-start: span 3;
+        }
+        .gallery-item:nth-child(6) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(7) {
+            grid-column-start: span 5;
+            grid-row-start: span 1;
+        }
+        .gallery-item:nth-child(8) {
+            grid-column-start: span 5;
+        }
+        .gallery-item:nth-child(9) {
+            grid-column-start: span 5;
+        }
+    }
+}
 
-@media only screen and (min-width: 360px) and (max-width: 1024px) {
+@media only screen and (min-width: 451px) and (max-width: 1024px) {
     .gallery-container {
         grid-template-columns: repeat(5, 1fr);
         .gallery-item:nth-child(1) {
