--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ footer .container-fluid-footer {
       padding: 5px 20px 20px 20px; } }
 
 /*------GALERIA------*/
-@media only screen and (min-width: 360px) and (max-width: 450px) {
+@media only screen and (min-width: 360px) and (max-width: 500px) {
   .gallery-container {
     grid-template-columns: repeat(5, 1fr); }
     .gallery-container .gallery-item:nth-child(1) {
@@ -310,14 +310,13 @@ footer .container-fluid-footer {
     .gallery-container .gallery-item:nth-child(6) {
       grid-column-start: span 5; }
     .gallery-container .gallery-item:nth-child(7) {
-      grid-column-start: span 5;
-      grid-row-start: span 1; }
+      grid-column-start: span 5; }
     .gallery-container .gallery-item:nth-child(8) {
       grid-column-start: span 5; }
     .gallery-container .gallery-item:nth-child(9) {
       grid-column-start: span 5; } }
 
-@media only screen and (min-width: 451px) and (max-width: 1024px) {
+@media only screen and (min-width: 501px) and (max-width: 1024px) {
   .gallery-container {
     grid-template-columns: repeat(5, 1fr); }
     .gallery-container .gallery-item:nth-child(1) {
