--- a/scss/componentes/_regiones.scss
+++ b/scss/componentes/_regiones.scss
@@ -34,6 +34,7 @@
         background: $color-principal;
         padding: 8em;
         background: url(https://wallake.org/uploads/posts/2022-09/1663630561_1780-1.webp) no-repeat center center/cover;
+        background-size: cover;
         .hover {
             z-index: 1;
             cursor: pointer;
@@ -78,15 +79,16 @@
             z-index: 0;
             letter-spacing: 25px;
             cursor: pointer;
-            font: 900 60px Montserrat;
+            font: 900 45px Montserrat;
             text-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
         }
     }
     .concept-two {
         display: grid;
         grid: 100%/repeat(7, 1fr);
-        padding: 5em 15em;
+        padding: 5em 0em;
         background: url("../../assets/imagenes/inazuma.jpg") center center/cover;
+        background-size: cover;
         .hover {
             @extend %grid;
             place-items: center;
@@ -111,6 +113,7 @@
     .concept-three {
         padding: 5em;
         background: url(https://images7.alphacoders.com/120/1200618.jpg) center center/cover;
+        background-size: cover;
         .word {
             display: flex;
             align-items: center;
@@ -154,16 +157,17 @@
         height: 100vh;
         position: relative;
         @extend %flex;
-        letter-spacing: 2em;
+        letter-spacing: 1em;
         background: url("../../assets/imagenes/mondstadt.jpg") no-repeat center center/cover;
+        background-size: cover;
         h1 {
             display: inline-block;
             color: $color-titulos;
-            font: 900 60px Montserrat;
+            font: 900 40px Montserrat;
             text-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
         }
         &:hover h1 {
-            letter-spacing: 25px;
+            letter-spacing: 5px;
             cursor: pointer;
             transform: scale(1.3);
             transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -195,31 +199,35 @@
         }
     }
     .concept-seven {
-        background: url("../../assets/imagenes/Palace_in_Snezhnaya.webp") top center/cover;
+        background: url("../../assets/imagenes/Palace_in_Snezhnaya.webp") center center/cover;
         @extend %flex;
-        h1 {
-            letter-spacing: 35px;
+        .word {
+            @extend %flex;
+            width: 450px;
+            height: 80%;
             color: $color-titulos;
-            position: relative;
-            cursor: pointer;
-            font: 900 60px Montserrat;
-            text-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            &:before {
-                content: "Snezhnaya";
-                position: absolute;
-                margin: auto;
-                left: 0;
-                right: 0;
-                max-width: 400px;
-                color: transparent;
-                letter-spacing: 10px;
-                text-shadow: none;
+            &:hover .char:before {
+                transition: 0.6s ease;
+                color: rgba(255, 255, 255, 0.8);
+                animation: falls 1s ease forwards;
+            }
+            &:hover .char:nth-child(1):before {
+                animation: falls 0.9s ease 0.2s forwards;
+            }
+            &:hover .char:nth-child(2n + 3):before {
+                animation: falls 1s ease 0.3s forwards;
             }
         }
-        &:hover h1:before {
-            transition: 0.6s ease;
-            color: rgba(255, 255, 255, 0.8);
-            animation: jump-out 0.6s ease forwards;
+        .char {
+            flex: 1;
+            position: relative;
+            &:before {
+                content: attr(data-content);
+                position: absolute;
+                top: 0;
+                color: transparent;
+                text-shadow: none;
+            }
         }
     }
 }
