--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,11 +146,13 @@ section .container-card {
           width: 400px; }
       section .container-card .card-container .card-materiales h2 {
         color: #050624;
-        margin: 0 30px; }
+        margin: 0 30px;
+        text-align: center; }
       section .container-card .card-container .card-materiales h4 {
         margin-left: 30px;
         margin-right: 30px;
-        margin-bottom: 20px; }
+        margin-bottom: 20px;
+        text-align: center; }
     section .container-card .card-container .historia {
       padding: 20px;
       text-align: center;
