--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -62,11 +62,13 @@ section .container-card {
             h2 {
                 color: #050624;
                 margin: 0 30px;
+                text-align: center;
             }
             h4 {
                 margin-left: 30px;
                 margin-right: 30px;
                 margin-bottom: 20px;
+                text-align: center;
             }
         }
         .historia {
